Added a ResourceStream for convenience, changed "file" to "URL" in various locations of URLStream.
git-svn-id: svn+ssh://src.earth.threerings.net/nenya/trunk@1163 ed5b42cb-e716-0410-a449-f6a68f950b19